--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <script src="./app.js"></script>
     <div class="interface">
         <h1>Welcome To Quiz Competition</h1>
         <form action="" class="frm">
@@ -22,7 +23,7 @@
             </label>
         </form>
 
-        <button class="btn">start Quiz</button>
+        <button class="btn" id="btns" >start Quiz</button>
     </div>
 </body>
 </html>
